--- a/styles/helpers.css
+++ b/styles/helpers.css
@@ -9,49 +9,8 @@
 	overflow: hidden;
 }
 
-.link {
-	text-decoration: none;
+.ml-auto {
+	margin-left: auto;
 }
 
-.splitter-before {
-	position: relative;
-}
 
-.splitter-after {
-	position: relative;
-}
-
-.splitter-before::before {
-	content: '';
-	position: absolute;
-	width: 2px;
-	height: 32px;
-	background-color: var(--separator-color);
-	left: -20px;
-	top: 50%;
-	transform: translateY(-50%);
-}
-
-.splitter-after::after {
-	content: '';
-	position: absolute;
-	width: 2px;
-	height: 32px;
-	background-color: var(--separator-color);
-	right: -20px;
-	top: 50%;
-	transform: translateY(-50%);
-	display: none;
-}
-
-.active-link {
-	border: 2px solid var(--secondary-border-color);
-	background-color: var(--white);
-	border-radius: 6px;
-}
-
-@media (min-width: 768px) {
-	.splitter-after::after {
-		display: block;
-	}
-}
