--- a/styles/style.css
+++ b/styles/style.css
@@ -45,4 +45,7 @@ body {
 	font-weight: 400;
 	font-size: 1.6rem;
 	line-height: 1.5;
+	position: relative;
+	max-width: 1440px;
+	margin: 0 auto;
 }
