--- a/blocks/detailed-nav.css
+++ b/blocks/detailed-nav.css
@@ -9,17 +9,13 @@
 	font-size: 2.8rem;
 	line-height: 1.4;
 	font-weight: 700;
-	margin: 0;
 	margin-bottom: 2.4rem;
 	padding-left: 1.6rem;
 	border-left: 4px solid var(--primary-border-color);
 }
 
 .detailed-nav__list {
-	list-style-type: none;
-	margin: 0;
 	padding-inline-start: 0;
-	padding: 0;
 	padding-left: 1.6rem;
 	padding-bottom: 1rem;
 	margin-bottom: 1.4rem;
@@ -32,6 +28,7 @@
 	padding: 0.8rem 1rem 0.8rem 1.6rem;
 	border: 2px solid transparent;
 	transition: all 0.3s ease-in-out;
+	/* исправить */
 	color: var(--secondary-text-color);
 }
 
