--- a/blocks/header.css
+++ b/blocks/header.css
@@ -9,6 +9,15 @@
 	margin-right: 1.6rem;
 }
 
+.header__contact-us {
+  display: none;
+  margin-left: auto;
+}
+
+.header__services {
+  margin-left: auto;
+}
+
 @media (min-width: 768px) {
 	.header {
 		padding: 0 2.4rem;
@@ -16,6 +25,14 @@
 
 	.header__burger {
 		margin-right: 4.2rem;
+	}
+
+  .header__contact-us {
+  display: block;
+}
+
+.header__services {
+		margin-left: 4.2rem;
 	}
 }
 
