--- a/src/scss/layout/_main-content.scss
+++ b/src/scss/layout/_main-content.scss
@@ -1,20 +1,20 @@
 .main-content {
+	flex-grow: 1;
+	background-color: $main-bg-color;
 
-  @include bp-1120 {
-    position: relative;
+	@include bp-1120 {
+		position: relative;
 		margin-left: 320px;
-  }
+	}
 
-  &__services {
-    display: none;
+	&__services {
+		display: none;
 
-    @include bp-1120 {
-      display: flex;
-      position: absolute;
-      right: 3rem;
-      top: 4rem;
-    }
-  }
+		@include bp-1120 {
+			display: flex;
+			position: absolute;
+			right: 3rem;
+			top: 4rem;
+		}
+	}
 }
-
-
