--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -12,26 +12,44 @@ html {
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+	text-decoration: none;
+	color: inherit;
+	transition: filter 0.3s ease-in-out, transform 0.3s linear;
+
+	&.active {
+		cursor: default;
+	}
+
+	&:not(.active):active {
+		transform: translateY(1px);
+	}
+
+	&:not(.active):hover {
+		filter: opacity(50%);
+	}
 }
 
 img {
-  max-width: 100%;
+	max-width: 100%;
 }
 
 ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  font-size: inherit;
-  font-weight: inherit;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+	font-size: inherit;
+	font-weight: inherit;
 }
 
 p {
-  margin: 0;
+	margin: 0;
 }
