--- a/src/scss/components/_title.scss
+++ b/src/scss/components/_title.scss
@@ -1,6 +1,6 @@
 .title {
-	color: var(--secondary-text-color);
-	font-size: 1.6rem;
+	color: $grey;
+	font-size: $font-size-main;
 	font-weight: 400;
 	text-transform: uppercase;
 	background-image: linear-gradient(90deg, #f8f8f8 1.39%, #ffffff 100%);
