--- a/src/scss/layout/_brands.scss
+++ b/src/scss/layout/_brands.scss
@@ -1,21 +1,22 @@
 .brands {
-	background-color: var(--main-bg-color);
-	border-bottom: 1px solid var(--tertiary-border-color);
+	@include section-styles;
 
-  &__title {
-    padding: 1.6rem;
+	&__title {
+		padding: $title-padding;
 
-    @include bp-768 {
-      padding: 1.6rem 2.4rem;
-    }
-  }
+		@include bp-768 {
+			padding: $title-padding-768;
+		}
 
-  &__slider-slide {
-    height: 72px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+		@include bp-1440 {
+			padding: $title-padding-1440;
+		}
+	}
+
+	&__slider-slide {
+		height: 72px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
 }
-
-
