--- a/src/scss/layout/_contact-us.scss
+++ b/src/scss/layout/_contact-us.scss
@@ -1,9 +1,9 @@
 .contact-us {
-  &__btn {
-    margin-right: 1.6rem;
+	&__btn {
+		margin-right: 1.6rem;
 
-    &:last-child {
-      margin-right: 0rem;
-    }
-  }
+		&:last-child {
+			margin-right: 0;
+		}
+	}
 }
