--- a/src/scss/layout/_devices.scss
+++ b/src/scss/layout/_devices.scss
@@ -1,20 +1,27 @@
 .devices {
-  background-color: var(--main-bg-color);
-	border-bottom: 1px solid var(--tertiary-border-color);
+	@include section-styles;
 
-  &__title {
-    padding: 1.6rem;
+	&__title {
+		padding: $title-padding;
 
-    @include bp-768 {
-      padding: 1.6rem 2.4rem;
-    }
-  }
+		@include bp-768 {
+			padding: $title-padding-768;
+		}
 
-  &__slider-slide {
-    height: 160px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-  }
+		@include bp-1440 {
+			padding: $title-padding-1440;
+		}
+	}
+
+	&__slider-slide {
+		height: 160px;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: flex-start;
+	}
+
+	&__slider-link {
+		align-self: flex-end;
+	}
 }
