--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-	background-color: var(--main-bg-color);
+	background-color: $main-bg-color;
 	padding: 1.6rem;
 
 	@include bp-768 {
@@ -19,8 +19,8 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		color: var(--secondary-text-color);
-		font-size: 1.4rem;
+		color: $grey;
+		font-size: $font-size-md;
 
 		@include bp-768 {
 			flex-direction: row;
