--- a/src/scss/layout/_prices.scss
+++ b/src/scss/layout/_prices.scss
@@ -1,18 +1,17 @@
 .prices {
-	background-color: var(--main-bg-color);
-	border-bottom: 1px solid var(--tertiary-border-color);
+	@include section-styles;
 	padding-bottom: 4rem;
 
 	&__title {
-		padding: 1.6rem;
+		padding: $title-padding;
 
 		@include bp-768 {
 			margin-bottom: 3rem;
-			padding: 1.6rem 2.4rem;
+			padding: $title-padding-768;
 		}
 
 		@include bp-1440 {
-			padding: 1.6rem 3.2rem;
+			padding: $title-padding-1440;
 		}
 	}
 
@@ -22,8 +21,8 @@
 		@include bp-768 {
 			display: flex;
 			margin: 0 4rem;
-			font-size: 1.4rem;
-			color: var(--secondary-text-color);
+			font-size: $font-size-md;
+			color: $grey;
 		}
 
 		@include bp-1440 {
@@ -55,7 +54,7 @@
 
 	&__slider-wrapper {
 		@include bp-768 {
-			background-color: var(--white);
+			background-color: $white;
 			padding: 0 1.6rem;
 			border-radius: 6px;
 			display: flex;
@@ -80,7 +79,7 @@
 		@include bp-768 {
 			width: 100%;
 			border: none;
-			border-bottom: 1px solid var(--separator-color);
+			border-bottom: 1px solid $grey-lightest;
 			border-radius: 0;
 			padding: 2rem 0;
 			flex-direction: row;
@@ -101,35 +100,41 @@
 
 		@include bp-768 {
 			margin-bottom: 0;
+		}
+	}
 
-			&:nth-of-type(1) {
-				width: 45%;
-			}
+	&__service {
+		@include bp-768 {
+			width: 45%;
+		}
+	}
 
-			&:nth-of-type(2) {
-				width: 20%;
-			}
+	&__price {
+		@include bp-768 {
+			width: 20%;
+		}
+	}
 
-			&:nth-of-type(3) {
-				width: 20%;
+	&__time {
+		@include bp-768 {
+			width: 20%;
+		}
+	}
+
+	&__slider-content {
+		display: block;
+		font-size: $font-size-md;
+
+		&:nth-child(1) {
+			color: $grey;
+
+			@include bp-768 {
+				display: none;
 			}
 		}
 
-		span {
-			display: block;
-			font-size: 1.4rem;
-
-			&:nth-child(1) {
-				color: var(--secondary-text-color);
-
-				@include bp-768 {
-					display: none;
-				}
-			}
-
-			&:nth-child(2) {
-				letter-spacing: 0.2px;
-			}
+		&:nth-child(2) {
+			letter-spacing: 0.2px;
 		}
 	}
 
@@ -149,13 +154,13 @@
 			position: relative;
 			bottom: 0;
 			right: 0;
-			width: 12%;
+			width: 15%;
 		}
 	}
 
 	&__info {
 		padding: 0 1.6rem;
-		font-size: 1.4rem;
+		font-size: $font-size-md;
 		margin-bottom: 1rem;
 
 		@include bp-768 {
