--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -1,3 +1,4 @@
+/* media queries */
 @mixin bp-360 {
 	@media (min-width: 360px) {
 		@content;
@@ -26,4 +27,10 @@
 	@media (min-width: 1440px) {
 		@content;
 	}
+}
+
+/* common mixins */
+@mixin section-styles {
+	background-color: $main-bg-color;
+	border-bottom: 1px solid $tertiary-border-color;
 }
