--- a/src/scss/utils/_vars.scss
+++ b/src/scss/utils/_vars.scss
@@ -1,2 +1,29 @@
-$padding-sm: 0 1.6rem;
-$padding-md: 0 2.4rem;
+/* colors */
+$pink: #ff3e79;
+$white: #ffffff;
+$main-text-color: #1b1c21;
+$grey: #7e7e82;
+$grey-lighten: #b5b6bc;
+$grey-lightest: #eaeaea;
+$primary-border-color: #41f6d7;
+$secondary-border-color: #b8ffec;
+$tertiary-border-color: #d9fff5;
+$main-bg-color: #f8f8f8;
+
+/* fonts */
+$main-font: 'TT Lakes', 'Arial', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+	Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+/* font values */
+$font-size-main: 1.6rem;
+$font-size-biggest: 2.8rem;
+$font-size-big: 2.4rem;
+$font-size-md: 1.4rem;
+$font-size-sm: 1.2rem;
+
+/* paddings */
+$padding-hor-sm: 0 1.6rem;
+$padding-hor-md: 0 2.4rem;
+$title-padding: 1.6rem;
+$title-padding-768: 1.6rem 2.4rem;
+$title-padding-1440: 1.6rem 3.2rem;
